# DLR-rt

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
DLR_rt/examples/: 2x1d_dlr_periodic.py  classic_periodic.py  dlr_2x1d_dd_hohlraum_splitting.py  dlr_2x1d_dd_lattice_splitting.py  dlr_2x1d_dd_splitting.py  dlr_2x1d_dd_xy_splitting.py  dlr_2x1d_periodic.py  dlr_2x1d_periodic_spacedepcoeff.py  dlr_dd.py  dlr_dd_4domains.py  dlr_inflow.py  dlr_periodic.py
DLR_rt/src/: grid.py  initial_condition.py  integrators.py  lr.py  run_functions.py  splitting_2x1d.py  util.py
DLR_rt/tests/: test_2x1d.py
src/: cendiff.py  dlr.py  dlr_dd.py  dlr_inflow.py  plots.py
